<resources>
    <string name="app_name">StoryApp</string>
    <string name="title_signup_page">Lengkapi data diri anda</string>
    <string name="title_login_page">Masukkan data anda</string>
    <string name="title_welcome_page">Selamat Datang</string>
    <string name="name">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="logout">Keluar</string>
    <string name="logo_desc">logo_desc</string>
    <string name="error_email">Lengkapi email anda</string>
    <string name="error_password">Password minimal 6 karakter</string>
    <string name="hint_name">Andy</string>
    <string name="hint_email">andy@email.com</string>
    <string name="hint_password">min. 6 karakter</string>
    <string name="error_name">Nama tidak boleh kosong</string>
    <string name="message_main_page">Selamat datang di Dicoding Stories</string>
    <string name="greeting">Halo, %1$s</string>
    <string name="story_list">Daftar Cerita</string>
    <string name="settings">Pengaturan</string>
    <string name="img_story">Story Image</string>
    <string name="title">%1$s</string>
    <string name="created_by">Dibuat oleh %1$s</string>
    <string name="btn_add">Button add</string>
    <string name="created_at">%1$s</string>
    <string name="detail_image">Detail image</string>
    <string name="description">deskripsi</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="error_description">Deskripsi tidak boleh kosong</string>
    <string name="content_type">multipart/form-data</string>
    <string name="success">Sukses</string>
    <string name="loading">Memuat</string>
    <string name="success_login">Berhasil masuk</string>
    <string name="ok">OK</string>
    <string name="failed_img">failed_img</string>
    <string name="success_img">success_img</string>
    <string name="success_reg">Berhasil daftar</string>
    <string name="uploading">Mengunggah</string>
    <string name="permission">Gagal mendapat permission</string>
    <string name="image_not_exist">Masukkan gambar terlebih dahulu</string>
    <string name="image_capture">image_capture</string>
    <string name="image_switch">image_switch</string>
    <string name="failed_load_image">Gagal mengambil gambar.</string>
    <string name="failed_load_camera">Gagal memunculkan kamera.</string>
    <string name="preview_image">Preview image</string>
    <string name="welcome_image">welcome image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="story_location">Lokasi Cerita</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="new_mark">Lokasi Baru</string>
    <string name="load_failed_story">Gagal memuat</string>
    <string name="load_failed_map">Gagal memuat map</string>
    <string name="check_location">aktifkan lokasi terlebih dahulu</string>

</resources>